--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.10.0"
   }
 }
